# src/swagger.json
@@ -28,7 +28,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "Created"
           },
           "500": {
@@ -145,8 +145,8 @@
           "204": {
             "description": "No Content"
           },
-          "500": {
-            "description": "Server Error"
+          "404": {
+            "description": "product not found"
           }
         }
       }
@@ -175,7 +175,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "Created"
           }
         }
@@ -205,7 +205,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "Created"
           }
         }
@@ -244,7 +244,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "Created"
           }
         }
